--- a/stream-one.html
+++ b/stream-one.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello World</title>
+    <link rel="stylesheet" href="css/style.css" type="text/css" />
 </head>
 <body>
     <nav>
@@ -14,7 +15,7 @@
             <li><a href="stream-three.html">Stream Three</a></li>
         </ul>
     </nav>
-    <h1>Hello World</h1>
+    <h1>Stream One</h1>
     <p>Created by GitPod</p>
 </body>
 </html>
